Update index.html with HTML comments

--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!-- 
+Name: Gurtej Sandhu
+File: index.html
+Date: 02 April 2025
+Description: html file of birdwatching site
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
