Added HTML Comments to all index.html files

--- a/part1/index.html
+++ b/part1/index.html
@@ -1,3 +1,12 @@
+<!--
+Name: Gurtej Sandhu
+Date: 02 April 2025
+File: index.html
+Description:  This file creates a simple web page for generating 
+              a silly random story based on user input, including 
+              a custom name and region selection
+-->
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
