--- a/part2/index.html
+++ b/part2/index.html
@@ -1,3 +1,12 @@
+<!--
+Name: Gurtej Sandhu
+Date: 02 April 2025
+File: index.html
+Description:  This file creates a simple image gallery with a 
+              main displayed image, a darken effect button, 
+              and a thumbnail bar for additional images
+-->
+
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
