--- a/part3/index.html
+++ b/part3/index.html
@@ -1,3 +1,12 @@
+<!--
+Name: Gurtej Sandhu
+Date: 02 April 2025
+File: index.html
+Description:  This file creates a simple web page featuring an 
+              interactive "Bouncing Balls" animation using the 
+              <canvas> element and JavaScript
+-->
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
