--- a/part4/index-finished.html
+++ b/part4/index-finished.html
@@ -1,3 +1,12 @@
+<!--
+Name: Gurtej Sandhu
+Date: 02 April 2025
+File: index-finished.html
+Description:  This file creates a web page with a completed 
+              version of the "Bouncing Balls" animation using 
+              a <canvas> element and JavaScript
+-->
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
