--- a/part1/index.html
+++ b/part1/index.html
@@ -59,5 +59,6 @@ Description:  This file creates a simple web page for generating
     </div>
     <!-- Thanks a lot to Willy Aguirre for his help with the code for this assessment -->
     <p class="story"></p>
+    <script src="main.js"></script> 
   </body>
 </html>
