Completed part 4 and implemented EvilCircle feature

--- a/part4/index-finished.html
+++ b/part4/index-finished.html
@@ -2,9 +2,10 @@
 Name: Gurtej Sandhu
 Date: 02 April 2025
 File: index-finished.html
-Description:  This file creates a web page with a completed 
-              version of the "Bouncing Balls" animation using 
-              a <canvas> element and JavaScript
+Description: This file creates a web page with a completed 
+             version of the "Bouncing Balls" animation using 
+             a <canvas> element and JavaScript. Includes an 
+             EvilCircle that removes balls and displays a live ball count.
 -->
 
 <!DOCTYPE html>
@@ -12,12 +13,13 @@ Description:  This file creates a web page with a completed
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Bouncing balls</title>
+    <title>Bouncing Balls</title>
     <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
-    <h1>bouncing balls</h1>
+    <h1>Bouncing Balls</h1>
+    <p>Ball count: <span id="ball-count">25</span></p>
     <canvas></canvas>
 
     <script src="main-finished.js"></script>
